# AgentNOC

./: .gitignore  Cargo.toml  README.md  prefixes.test.yml  prefixes.yml.example
.github/workflows/: ci.yml
src/: config.rs  main.rs  mcp_clients.rs  native_mcps.rs
src/agents/: alert_analyzer.rs  chat.rs  health.rs  hijack.rs  mod.rs
src/alerts/http/: mod.rs  openapi.rs  server.rs
src/alerts/http/routes/: alerts.rs  mcp.rs  mod.rs
src/database/: db.rs  models.rs
src/ui/tui/: terminal.rs
web-ui/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
web-ui/src/: App.jsx  index.css
web-ui/src/components/: AlertDataCard.jsx  AlertDetailView.jsx  AlertListItem.jsx  AlertsSidebar.jsx  ChatHistory.jsx  ChatInput.jsx  Dashboard.jsx  DeleteConfirmDialog.jsx  IncidentReportCard.jsx  MainView.jsx  McpServerCard.jsx  McpServerForm.jsx  McpServersSection.jsx  SettingsPage.jsx
