[package]
name = "noc_agent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
color-eyre = "0.6.5"
crossterm = "0.29.0"
dotenv = "0.15.0"
ratatui = "0.29.0"
rig-core = { version = "0.23.1", features = ["rmcp"] }
rmcp = { version = "0.6.4", features = ["schemars", "server", "client", "transport-streamable-http-client", "transport-streamable-http-client-reqwest"]}
serde = "1.0.228"
serde_json = "1.0.145"
swarms-rs = "0.2.1"
tokio = "1.48.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
