[package]
name = "agent_noc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
color-eyre = "0.6.5"
dotenv = "0.15.0"
futures = "0.3.30"
open = "5.1.0"
rig-core = { version = "0.26.0", features = ["rmcp"] }
tokio-stream = { version = "0.1.16", features = ["sync"] }
tower = "0.5.1"
tower-http = { version = "0.6.0", features = ["fs", "trace"] }
rmcp = { version = "0.9.1", features = ["client", "transport-streamable-http-client", "transport-streamable-http-client-reqwest", "transport-child-process"] }
serde = "1.0.228"
serde_json = "1.0.145"
serde_yaml = "0.9.34"
swarms-rs = "0.2.1"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
ipnet = "2.11.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
axum-test = "9.0"
tower = { version = "0.5.1", features = ["util"] }
